reworking student dashboard 2

--- a/FM_MyStat.Web/Views/Shared/StudentDashboard/_Header.cshtml
+++ b/FM_MyStat.Web/Views/Shared/StudentDashboard/_Header.cshtml
@@ -10,3 +10,8 @@
 <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 <!-- Theme style -->
 <link rel="stylesheet" href="~/dashboard/css/adminlte.min.css">
+<style>
+    .content-wrapper{
+        background-color: #e1f1fd;
+    }
+</style>
