--- a/FM_MyStat.Web/Views/Shared/_AdminLayout.cshtml
+++ b/FM_MyStat.Web/Views/Shared/_AdminLayout.cshtml
@@ -4,8 +4,8 @@
 <head>
     <partial name="./AdminDashboard/_Header.cshtml" />
 </head>
-<body class="hold-transition sidebar-mini">
-    <div>
+<body class="hold-transition sidebar-mini" style="background:#e1f1fd;">
+    <div class="wrapper" style="background:#e1f1fd;">
         <partial name="./AdminDashboard/_NavBar.cshtml" />
         <partial name="./AdminDashboard/_SideBar.cshtml" />
         @RenderBody()
