--- a/FM_MyStat.Web/Views/Shared/_TeacherLayout.cshtml
+++ b/FM_MyStat.Web/Views/Shared/_TeacherLayout.cshtml
@@ -4,8 +4,8 @@
 <head>
     <partial name="./TeacherDashboard/_Header.cshtml" />
 </head>
-<body class="hold-transition sidebar-mini">
-    <div>
+<body class="hold-transition sidebar-mini" style="background:#e1f1fd">
+    <div class="wrapper" style="background:#e1f1fd;">
         <partial name="./TeacherDashboard/_NavBar.cshtml" />
         <partial name="./TeacherDashboard/_SideBar.cshtml" />
         @RenderBody()
