--- a/FM_MyStat.Web/wwwroot/dashboard/css/alt/adminlte.core.css
+++ b/FM_MyStat.Web/wwwroot/dashboard/css/alt/adminlte.core.css
@@ -11752,7 +11752,7 @@ body.sidebar-collapse:not(.sidebar-mini-xs):not(.sidebar-mini-md):not(.sidebar-m
 }
 
 .content-wrapper {
-  background-color: #f4f6f9;
+    background-color: #e1f1fd;
 }
 
 .content-wrapper > .content {
