Reworking page with howemorks for student

--- a/FM_MyStat.Web/Views/Shared/_LoginLayout.cshtml
+++ b/FM_MyStat.Web/Views/Shared/_LoginLayout.cshtml
@@ -4,9 +4,9 @@
     <partial name="./Login/_Header.cshtml" />
 </head>
 
-    <div>
+<body>
         @RenderBody()
-    </div>
-    @await RenderSectionAsync("Scripts", required: false)
+</body>
+        @await RenderSectionAsync("Scripts", required: false)
 
 </html>
