--- a/FM_MyStat.Web/Views/Admin/Edit.cshtml
+++ b/FM_MyStat.Web/Views/Admin/Edit.cshtml
@@ -92,32 +92,32 @@
                             {
                                 <span class="text-danger">@ViewBag.AuthError</span>
                             }
-                            <div class="mb-3" class="form__group field">
-                                <label>FirstName</label>
+                            <div class="mb-3 form__group field">
                                 <input asp-for="Id" type="hidden" class="form__field" aria-label="Id" aria-describedby="email-addon" />
                                 <input asp-for="FirstName" type="text" class="form__field" placeholder="FirstName" aria-label="FirstName">
                                 <span class="text-danger" asp-validation-for="FirstName"></span>
+                                <label class="form__label">FirstName</label>
                             </div>
-                            <div class="mb-3" class="form__group field">
-                                <label>LastName</label>
+                            <div class="mb-3 form__group field">
                                 <input asp-for="Id" type="hidden" class="form__field" aria-label="Id" aria-describedby="email-addon" />
                                 <input asp-for="LastName" type="text" class="form__field" placeholder="LastName" aria-label="LastName">
                                 <span class="text-danger" asp-validation-for="LastName"></span>
+                                <label class="form__label">LastName</label>
                             </div>
-                            <div class="mb-3" class="form__group field">
-                                <label>Last name</label>
+                            <div class="mb-3 form__group field">
                                 <input asp-for="SurName" type="text" class="form__field" placeholder="SurName" aria-label="SurName">
                                 <span class="text-danger" asp-validation-for="SurName"></span>
+                                <label class="form__label">Last name</label>
                             </div>
-                            <div class="mb-3" class="form__group field">
-                                <label>Email</label>
+                            <div class="mb-3 form__group field">
                                 <input asp-for="Email" type="email" class="form__field" placeholder="Email" aria-label="Email" aria-describedby="email-addon">
                                 <span class="text-danger" asp-validation-for="Email"></span>
+                                <label class="form__label">Email</label>
                             </div>
-                            <div class="mb-3" class="form__group field">
-                                <label>Phone Number</label>
+                            <div class="mb-3 form__group field">
                                 <input asp-for="PhoneNumber" type="tel" class="form__field" placeholder="Phone Number" aria-label="PhoneNumber">
                                 <span class="text-danger" asp-validation-for="PhoneNumber"></span>
+                                <label class="form__label">Phone Number</label>
                             </div>
                             <div class="text-center">
                                 <button type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2">Save</button>
