--- a/FM_MyStat.Web/Views/News/Edit.cshtml
+++ b/FM_MyStat.Web/Views/News/Edit.cshtml
@@ -4,7 +4,81 @@
 @{
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+<style>
+    .card-header {
+        background: rgb(92,121,171);
+        background: linear-gradient(38deg, rgba(92,121,171,1) 0%, rgba(52,79,126,1) 57%, rgba(39,39,99,1) 100%, rgba(32,48,76,1) 100%);
+        color: white;
+    }
 
+    .btn-primary {
+        background: rgb(92,121,171);
+        background: linear-gradient(38deg, rgba(92,121,171,1) 0%, rgba(52,79,126,1) 57%, rgba(39,39,99,1) 100%, rgba(32,48,76,1) 100%);
+        color: white;
+    }
+
+    .form__group {
+        position: relative;
+        padding: 15px 0 0;
+        margin-top: 10px;
+        width: 100%;
+    }
+
+    .form__field {
+        font-family: inherit;
+        width: 100%;
+        border: 0;
+        border-bottom: 2px solid #9b9b9b;
+        outline: 0;
+        font-size: 1.3rem;
+        color: black;
+        padding: 7px 0;
+        background: transparent;
+        transition: border-color 0.2s;
+    }
+
+        .form__field::placeholder {
+            color: transparent;
+        }
+
+        .form__field:placeholder-shown ~ .form__label {
+            font-size: 1.3rem;
+            cursor: text;
+            top: 20px;
+        }
+
+    .form__label {
+        position: absolute;
+        top: 0;
+        display: block;
+        transition: 0.2s;
+        font-size: 1rem;
+        color: #9b9b9b;
+    }
+
+    .form__field:focus ~ .form__label {
+        position: absolute;
+        top: 0;
+        display: block;
+        transition: 0.2s;
+        font-size: 1rem;
+        color: linear-gradient(38deg, rgba(92,121,171,1) 0%, rgba(52,79,126,1) 57%, rgba(39,39,99,1) 100%, rgba(32,48,76,1) 100%);
+        font-weight: 700;
+        padding-bottom: 6px;
+        font-weight: 700;
+        border-width: 3px;
+        border-image: linear-gradient(38deg, rgba(92,121,171,1) 0%, rgba(52,79,126,1) 57%, rgba(39,39,99,1) 100%, rgba(32,48,76,1) 100%);
+        border-image-slice: 1;
+    }
+
+    /* Reset input */
+    .form__field:required,
+    .form__field:invalid {
+        box-shadow: none;
+    }
+
+    }
+</style>
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -24,8 +98,6 @@
             <!-- SELECT2 EXAMPLE -->
             <div class="card card-default">
                 <div class="card-header">
-                    <h3 class="card-title">Edit news</h3>
-
                     <div class="card-tools">
                         <button type="button" class="btn btn-tool" data-card-widget="collapse">
                             <i class="fas fa-minus"></i>
@@ -51,22 +123,22 @@
                                 }
                                 <form method="post" asp-controller="News" asp-action="Edit">
                                     <div class="card-body">
-                                        <div class="form-group">
-                                            <label for="Title">News name</label>
-                                            <input type="hidden" class="form-control" name="TeacherId" id="TeacherId" value="@ViewBag.IdTeacher" />
-                                            <input type="text" asp-for="Title" name="Title" class="form-control" placeholder="News name">
+                                        <div class="form__group field">
+                                            <input type="hidden" class="form__field" name="TeacherId" id="TeacherId" value="@ViewBag.IdTeacher" />
+                                            <input type="text" asp-for="Title" name="Title" class="form__field" placeholder="News name">
+                                            <label for="Title" class="form__label">News name</label>
                                         </div>
-                                        <div class="form-group">
-                                            <label for="Description">Description</label>
-                                            <input type="text" asp-for="Description" name="Description" class="form-control" placeholder="Description">
+                                        <div class="form__group field">
+                                            <input type="text" asp-for="Description" name="Description" class="form__field" placeholder="Description">
+                                            <label for="Description" class="form__label">Description</label>
                                         </div>
-                                        <div class="form-group">
-                                            <label for="TimePublication">TimePublication</label>
-                                            <input type="datetime-local" asp-for="TimePublication" name="TimePublication" class="form-control">
+                                        <div class="form__group field">
+                                            <input type="datetime-local" asp-for="TimePublication" name="TimePublication" class="form__field">
+                                            <label for="TimePublication" class="form__label">TimePublication</label>
                                         </div>
-                                        <div class="form-group">
-                                            <label for="Time">Time</label>
-                                            <input type="datetime-local" asp-for="Time" name="Time" class="form-control">
+                                        <div class="form__group field">
+                                            <input type="datetime-local" asp-for="Time" name="Time" class="form__field">
+                                            <label for="Time" class="form__label">Time</label>
                                         </div>
                                     </div>
                                     <!-- /.card-body -->
