--- a/FM_MyStat.Web/Views/Admin/Create.cshtml
+++ b/FM_MyStat.Web/Views/Admin/Create.cshtml
@@ -116,31 +116,40 @@
                                             @* <label for="exampleInputEmail1">First name</label>
                                             <input type="text" name="firstName" class="form-control" id="exampleInputEmail1" placeholder="Enter First Name"> *@
                                             <div class="form__group field">
-                                                <input type="input" class="form__field" placeholder="First Name" name="firstName" id='firstName' required />
+                                                <input type="input" class="form__field" placeholder="First Name" name="firstName" required />
                                                 <label for="name" class="form__label">First Name</label>
                                             </div>
                                         </div>
                                         <div class="form-group">
 
                                             <div class="form__group field">
-                                                <input type="input" class="form__field" placeholder="First Name" name="surName" id='firstName' required />
+                                                <input type="input" class="form__field" placeholder="Sur Name" name="surName" required />
                                                 <label for="name" class="form__label">Sur Name</label>
                                             </div>
                                         </div>
                                         <div class="form-group">
 
                                             <div class="form__group field">
-                                                <input type="input" class="form__field" placeholder="First Name" name="lastName" id='firstName' required />
+                                                <input type="input" class="form__field" placeholder="Last Name" name="lastName" required />
                                                 <label for="name" class="form__label">Last Name</label>
                                             </div>
                                         </div>
                                         <div class="form-group">
 
                                             <div class="form__group field">
-                                                <input type="email" class="form__field" placeholder="First Name" name="email" id='firstName' required />
+                                                <input type="email" class="form__field" placeholder="Email" name="email" required />
                                                 <label for="name" class="form__label">Email</label>
                                             </div>
-                                        </div>                                                  
+                                        </div>
+                                        <div class="form-group">
+
+                                            <div class="form__group field">
+                                                <input type="input" class="form__field" placeholder="Phone Number" name="PhoneNumber" required />
+                                                <label for="name" class="form__label">Phone Number</label>
+                                            </div>
+                                        </div>
+                            
+
                                     </div>
                                     <!-- /.card-body -->
                                     <div class="card-footer">
