--- a/FM_MyStat.Web/Views/Admin/Index.cshtml
+++ b/FM_MyStat.Web/Views/Admin/Index.cshtml
@@ -1,6 +1,31 @@
-﻿@{
+﻿@using FM_MyStat.Core.DTOs.NewsDTO;
+@{
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+
+@model List<NewsDTO>
+
+<style>
+    .card-header {
+        background: linear-gradient(38deg, rgba(92,121,171,1) 0%, rgba(52,79,126,1) 57%, rgba(39,39,99,1) 100%, rgba(32,48,76,1) 100%)
+    }
+
+    .card-body, .card {
+        background: #c1d8f0;
+    }
+
+    .card_title {
+        font-weight: bold;
+        font-size: 20px;
+        color: white;
+        -webkit-text-stroke: 0.2px gray;
+    }
+
+    .block1, .list-group-item {
+        background: #E1EFFB;
+    }
+</style>
+
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <div class="content-header">
@@ -22,47 +47,38 @@
     <div class="content">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
                     <div class="card">
-                        <div class="card-header border-0">
-                            <div class="d-flex justify-content-between">
-                                <h3 class="card-title">Online Store Visitors</h3>
-                                <a href="javascript:void(0);">View Report</a>
-                            </div>
-                        </div>
+                        <div class="card-header text-center">
+                            <h1 class="card_title" style="font-size:30px;">
+                                Recent news
+                            </h1>
+                        </div> 
                         <div class="card-body">
-                            <div class="d-flex">
-                                <p class="d-flex flex-column">
-                                    <span class="text-bold text-lg">820</span>
-                                    <span>Visitors Over Time</span>
-                                </p>
-                                <p class="ml-auto d-flex flex-column text-right">
-                                    <span class="text-success">
-                                        <i class="fas fa-arrow-up"></i> 12.5%
-                                    </span>
-                                    <span class="text-muted">Since last week</span>
-                                </p>
-                            </div>
-                            <!-- /.d-flex -->
+                            @foreach (var news in Model)
+                            {
+                                <div class="card mt-4">
+                                    <div class="card-header">
+                                        <div class="row">
+                                        <div class="col-md-6">
+                                            <h1 class="card_title">@news.Title</h1>
+                                        </div>
+                                        <div class="col-md-6 text-md-right">
+                                            <h1 class="card_title">@news.Time</h1>
+                                        </div>
+                                        </div>
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text">@news.Description</p>
+                                    </div>
+                                </div>                                
+                            }
 
-                            <div class="position-relative mb-4">
-                                <div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
-                                <canvas id="visitors-chart" height="250" width="715" style="display: block; height: 200px; width: 572px;" class="chartjs-render-monitor"></canvas>
-                            </div>
-
-                            <div class="d-flex flex-row justify-content-end">
-                                <span class="mr-2">
-                                    <i class="fas fa-square text-primary"></i> This Week
-                                </span>
-
-                                <span>
-                                    <i class="fas fa-square text-gray"></i> Last Week
-                                </span>
-                            </div>
                         </div>
                     </div>
-                    <!-- /.card -->
                 </div>
+                <div class="col-md-2"></div>
             </div>
             <!-- /.row -->
         </div>
