Changing the display of information about users

--- a/FM_MyStat.Web/Views/Admin/GetAll.cshtml
+++ b/FM_MyStat.Web/Views/Admin/GetAll.cshtml
@@ -46,7 +46,7 @@
                             <div class="card-body">
                                 <p class="card-text"><strong>Email:</strong> @item.Email</p>
                                 <p class="card-text"><strong>EmailConfirmed:</strong> @item.EmailConfirmed</p>
-                                <p class="card-text"><strong>LockedOut:</strong> @item.LockedOut</p>
+                                <p class="card-text"><strong>LockoutEnabled:</strong> @item.LockoutEnabled</p>
                                 <p class="card-text"><strong>PhoneNumber:</strong> @item.PhoneNumber</p>
                             </div>
                             @if (item.Email != user.Email)
