--- a/FM_MyStat.Web/Views/Student/GetAll.cshtml
+++ b/FM_MyStat.Web/Views/Student/GetAll.cshtml
@@ -60,7 +60,7 @@ else
                             <div class="card-body">
                                 <p class="card-text"><strong>Email:</strong> @item.Email</p>
                                 <p class="card-text"><strong>EmailConfirmed:</strong> @item.EmailConfirmed</p>
-                                <p class="card-text"><strong>LockedOut:</strong> @item.LockedOut</p>
+                                <p class="card-text"><strong>LockoutEnabled:</strong> @item.LockoutEnabled</p>
                                 <p class="card-text"><strong>PhoneNumber:</strong> @item.PhoneNumber</p>
                                 <p class="card-text"><strong>Rating:</strong> @item.Rating</p>
                                 <p class="card-text"><strong>Group:</strong> @item.Group</p>
