Added a phone number when creating teacher and student

--- a/FM_MyStat.Web/Views/Teacher/Create.cshtml
+++ b/FM_MyStat.Web/Views/Teacher/Create.cshtml
@@ -129,6 +129,12 @@
                                             <input type="email" class="form__field" placeholder="Email" name="email" id='email' required />
                                             <label for="email" class="form__label">Email</label>
                                         </div>
+                                        <div class="form-group">
+                                            <div class="form__group field">
+                                                <input type="input" class="form__field" placeholder="Phone Number" name="PhoneNumber" required />
+                                                <label for="name" class="form__label">Phone Number</label>
+                                            </div>
+                                        </div>
                                     </div>
                                     <!-- /.card-body -->
                                     <div class="card-footer">
