--- a/FM_MyStat.Web/Views/Student/Create.cshtml
+++ b/FM_MyStat.Web/Views/Student/Create.cshtml
@@ -126,6 +126,12 @@
                                             <input type="text" class="form__field" placeholder="Last Name" name="lastName" id='lastName' required />
                                             <label for="lastName" class="form__label">Last Name</label>
                                         </div>
+                                        <div class="form-group">
+                                            <div class="form__group field">
+                                                <input type="input" class="form__field" placeholder="Phone Number" name="PhoneNumber" required />
+                                                <label for="name" class="form__label">Phone Number</label>
+                                            </div>
+                                        </div>
                                         <div class="form__group field">
                                             <input type="email" class="form__field" placeholder="Email" name="email" id='email' required />
                                             <label for="email" class="form__label">Email</label>
